@@ -300,9 +300,10 @@ __gmpn_cpuvec_init (void)
 		  CPUVEC_SETUP_core2;
 		  break;
 
-		case 0x1c:		/* Silverthorne */
-		case 0x26:		/* Lincroft */
-		case 0x27:		/* Saltwell */
+		case 0x1c:		/* Atom Silverthorne */
+		case 0x26:		/* Atom Lincroft */
+		case 0x27:		/* Atom Saltwell */
+		case 0x36:		/* Atom Cedarview/Saltwell */
 		  TRACE (printf ("  atom\n"));
 		  CPUVEC_SETUP_atom;
 		  CPUVEC_SETUP_atom_mmx;
@@ -335,6 +336,8 @@ __gmpn_cpuvec_init (void)
 
 		case 0x2a:		/* SBR */
 		case 0x2d:		/* SBR-EP */
+		case 0x3a:		/* IBR */
+		case 0x3c:		/* Haswell */
 		  TRACE (printf ("  sandybridge\n"));
                   CPUVEC_SETUP_p6_mmx;
                   CPUVEC_SETUP_p6_p3mmx;
